# turbo-text-transformer-prompts

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tttp.py
templates/: alter.j2  explain.j2  fix_ocr.j2  readme.j2  summary-2-shot.j2
tttp/: __main__.py  prompter.py
