[tool.poetry]
name = "turbo-text-transformer-prompts"
version = "0.1.0"
description = ""
authors = ["fergus <fergusfettes@gmail.com>"]
homepage = "https://github.com/fergusfettes/turbo-text-transformer-prompts"
readme = "README.md"
include = ["tttp.py"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"
ipython = "^8.11.0"

[tool.poetry.scripts]
tttp = "tttp:main"

[project]
name = "turbo-text-transformer-prompts"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
tttp = "tttp:main"

[tool.setuptools]
packages = ["tttp"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
